--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -286,7 +286,7 @@
 
         <Canvas x:Name="Design" Margin="180,111,150,40">
             <!--<Path Fill="MidnightBlue" Stroke="Red" StrokeThickness="1" Data="M 0 0 A 150 150 0 0 0 70 70 M 90 70 A 150 150 0 0 0 20 0" Margin="0,0,0,0"/>-->
-            <!--<Path Fill="Red" Stroke="Red" StrokeThickness="0.2" Data="M 175 210 a 0.5 0.5 0 0 0 1 1 a 0.5 0.5 0 0 0 -1 -1 z "/>-->
+            <Path Fill="MidnightBlue" Stroke="Red" StrokeThickness="1" Margin="20" Data="M 46.39 35.78 A 32.27 32.27 0 1 0 65.66 76.52 "/>
             <ContentPresenter Content="{Binding Design}"/>
         </Canvas>
         <Grid Margin="0" Height="40" VerticalAlignment="Bottom">
